Repairing broken drag-select functionality in filtering table on Study page, since it caught my eye.  Works in Safari and Chrome again.  Fixing a few spacing/styling issues with filtering table.

--- a/main/static/main/common.css
+++ b/main/static/main/common.css
@@ -671,7 +671,7 @@ div.filterTable > div.filterColumn div.filterCriteriaScrollZone {
 }
 table.filterCriteriaTable {
     padding:0px;
-    margin:2px 9px 2px 5px;
+    margin:2px 10px 2px 1px;
 }
 table.filterCriteriaTable tr {
     color:black;
@@ -689,9 +689,29 @@ table.filterCriteriaTable tr.nodata {
 table.filterCriteriaTable tr.nodata:hover {
     background-color:#E0E0E0;
 }
-.filterHead {
+div.filterHead {
+    padding:4px 8px 2px 2px;
+    margin:0px;
+}
+div.filterHead > span {
     color:black;
+    padding:0px;
+    margin:5px 0px 2px 2px;
     font-weight: bold;
+}
+div.filterHeadSearch {
+    padding:0px 0px 0px 2px;
+    margin:0px;
+}
+div.filterHeadSearch > input[type="text"] {
+    color:black;
+    padding:0px 8px 0px 6px;
+    margin:0px;
+    font-weight: bold;
+    font-size:11px;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
 }
 
 
